<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_margin="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="PIC"
            android:textSize="26sp"
            android:textStyle="italic"
            android:textColor="#1eb697"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="TURE"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="#464646"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_camera_24dp"
        android:id="@+id/imageView"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:id="@+id/txtImageName"
            android:layout_weight="1"
            android:hint="@string/caption"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/browse"
            android:background="@color/colorBackgroundDelete"
            android:onClick="btnBrowse_Click"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_upload"
        android:background="@drawable/button_rounded_corner_positive"
        android:layout_margin="16dp"
        android:onClick="btnUpload_Click"/>


</LinearLayout>
